--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,9 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,6 +27,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+ <!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvJoenQ5mqKW5Mdt-fHju2Hnm710qlYMM&libraries=places&callback=initMap"async></script> -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvJoenQ5mqKW5Mdt-fHju2Hnm710qlYMM&libraries=places"></script>
+	<script src="bundle.js"></script>
     <title>React App</title>
   </head>
   <body>
